--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "main": "index.js",
   "repository": "https://github.com/tabishz/staggering-grid-effect.git",
+  "homepage": ".",
   "author": "Tabish Zaidi",
   "license": "GPLv3",
   "dependencies": {
@@ -10,9 +11,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "animejs": "^3.2.2",
-    "eslint": "^9.15.0",
     "react": "^18.3.1",
-    "react-animejs": "^0.5.6",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
